Bug fix : rich box editor overflow-x on Chroome browser.

--- a/DevHunter/DevHunter.Web/wwwroot/css/job-offer-add/rich-text-editor.css
+++ b/DevHunter/DevHunter.Web/wwwroot/css/job-offer-add/rich-text-editor.css
@@ -58,7 +58,7 @@
     color: white;
     font-family: sans-serif;
     font-size: 18px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .rich-text-editor .rich-text-area:focus {
